[package]
name = "ansilo-connectors-native-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-util-pg = { path = "../../ansilo-util/pg" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = "0.10"
postgres-native-tls = "0.5"
native-tls = "0.2"
tokio = { workspace = true }
lazy_static = { workspace = true }
futures-util = "0.3.24"
rust_decimal = { workspace = true }
enum-as-inner = { workspace = true }

[build-dependencies]
ansilo-connectors-base = { path = "../base", features = ["build"] }

[dev-dependencies]
ansilo-connectors-base = { path = "../base", features = ["test"] }
pretty_assertions = "*"
serial_test = "*"
