[package]
name = "ansilo-connectors-native-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-util-pg = { path = "../../ansilo-util/pg" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
enum-as-inner = { workspace = true }
rusqlite = { version = "0.28", features = ["chrono", "bundled", "column_decltype", "load_extension"] }
fallible-iterator = "0.2.0"

[build-dependencies]
ansilo-connectors-base = { path = "../base", features = ["build"] }

[dev-dependencies]
ansilo-connectors-base = { path = "../base", features = ["test"] }
pretty_assertions = "*"
serial_test = "*"
