[package]
name = "ansilo-connectors-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-connectors-native-postgres = { path = "../native-postgres" }
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7" }
native-tls = "0.2.10"
postgres-native-tls = "0.5"
reqwest = { version = "0.11", features = ["native-tls", "json", "blocking"] }
url = { version = "*", features = ["serde"] }

[build-dependencies]
ansilo-connectors-base = { path = "../base", features = ["build"] }

[dev-dependencies]
ansilo-connectors-base = { path = "../base", features = ["test"] }
pretty_assertions = "*"
serial_test = "*"
